# poco

./: CHANGELOG  CMakeLists.txt  cppignore.lnx  cppignore.win
.github/workflows/: ci.yml
ActiveRecord/testsuite/src/: ActiveRecordTest.cpp  ActiveRecordTest.h  ActiveRecordTestSuite.cpp  ActiveRecordTestSuite.h  Driver.cpp  WinCEDriver.cpp  WinDriver.cpp
CppParser/testsuite/src/: AttributesParserTest.cpp  AttributesParserTest.h  AttributesTestSuite.cpp  AttributesTestSuite.h  CppParserTest.cpp  CppParserTest.h  CppParserTestSuite.cpp  CppParserTestSuite.h  WinDriver.cpp
CppUnit/: CMakeLists.txt
CppUnit/cmake/: PocoCppUnitConfig.cmake
CppUnit/src/: CppUnitException.cpp  TestCase.cpp  TestDecorator.cpp  TestFailure.cpp  TestResult.cpp  TestRunner.cpp  TestSuite.cpp  TextTestResult.cpp
Crypto/testsuite/src/: CryptoTest.cpp  CryptoTest.h  CryptoTestSuite.cpp  CryptoTestSuite.h  DigestEngineTest.cpp  DigestEngineTest.h  Driver.cpp  ECTest.cpp  ECTest.h  EVPTest.cpp  EVPTest.h  EnvelopeTest.cpp  EnvelopeTest.h  PKCS12ContainerTest.cpp  PKCS12ContainerTest.h  RSATest.cpp  RSATest.h  WinCEDriver.cpp  WinDriver.cpp
Data/testsuite/src/: DataTest.cpp  DataTest.h  DataTestSuite.cpp  DataTestSuite.h  SessionPoolTest.cpp  SessionPoolTest.h  WinCEDriver.cpp  WinDriver.cpp
Encodings/testsuite/src/: DoubleByteEncodingTest.cpp  DoubleByteEncodingTest.h  EncodingsTestSuite.cpp  EncodingsTestSuite.h  WinCEDriver.cpp  WinDriver.cpp
Foundation/: Foundation_vs140.vcxproj  Foundation_vs140.vcxproj.filters  Foundation_vs150.vcxproj  Foundation_vs150.vcxproj.filters  Foundation_vs160.vcxproj  Foundation_vs160.vcxproj.filters  Foundation_vs170.vcxproj  Foundation_vs170.vcxproj.filters
Foundation/src/: FileStream.cpp  FileStream_POSIX.cpp  FileStream_WIN32.cpp
Fruit/: CMakeLists.txt
Fruit/cmake/: PocoFruitConfig.cmake
Fruit/configuration/: CMakeLists.txt
Fruit/examples/server/: main.cpp  (+9 more)
Fruit/src/: CMakeLists.txt  binding_normalization.cpp  component.cpp  demangle_type_name.cpp  fixed_size_allocator.cpp  injector_storage.cpp  memory_pool.cpp  normalized_component_storage.cpp  normalized_component_storage_holder.cpp  semistatic_graph.cpp  semistatic_map.cpp
Fruit/test_package/: example.cpp
Fruit/tests/: fruit_test_common.py  test_bind_interface.py  test_binding_clash.py  test_binding_compression.py  test_class_destruction.py  test_common.cpp  test_common.h  test_component.py  test_component_and_injector_params.py  test_component_functions.py  test_component_replacement.py  test_dependency_loop.py  test_eager_injection.py  test_include_test.py  test_injected_provider.py  test_injector.py  test_injector_unsafe_get.py  test_install.py  test_install_component_functions.py  test_misc.py  test_multibindings_bind_instance.py  test_multibindings_bind_interface.py  test_multibindings_bind_provider.py  test_multibindings_misc.py  test_normalized_component.py  test_register_constructor.py  test_register_factory.py  test_register_instance.py  test_register_provider.py  test_required_types.py  test_semistatic_map_hash_selection.py  test_type_alignment.py  test_type_alignment_with_annotation.py  tested_features.md
SerialPort/: CMakeLists.txt
SerialPort/cmake/: PocoSerialPortConfig.cmake
SerialPort/doc/: serial.dox
SerialPort/include/Poco/SerialPort/: SerialPort.h
SerialPort/include/Poco/SerialPort/impl/: unix.h  win.h
SerialPort/samples/: CMakeLists.txt  serial_example.cc
SerialPort/src/: SerialPort.cc
SerialPort/src/impl/: unix.cc  win.cc
SerialPort/src/impl/list_ports/: list_ports_linux.cc  list_ports_osx.cc  list_ports_win.cc
Util/src/: IniFileConfiguration.cpp
doc/: 99100-ReleaseNotes.page
(+865 files in other folders)
